--- a/V1_Origen_Putumayo/index.html
+++ b/V1_Origen_Putumayo/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/src/assets/images/logo1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>v1-origen-putumayo</title>
+    <title>Origen putumayo</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
