feat: Agregacion de configuraciones SEO, se movio archivos a public: Favicon.png, robots.txt y sitemap.xml.

--- a/V1_Origen_Putumayo/index.html
+++ b/V1_Origen_Putumayo/index.html
@@ -1,15 +1,22 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/images/logo1.png" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Origen putumayo</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css"
-    /> 
-    <!--iconos de bootstrap-->
+    <title>Origen Putumayo - Productos Amazónicos Naturales</title>
+
+    <!-- SEO -->
+    <meta name="description" content="Descubre productos amazónicos 100% naturales desde el origen del Putumayo, Colombia. Miel silvestre, aceites esenciales, plantas medicinales y más. Envíos a toda Colombia." />
+    <meta name="keywords" content="productos amazónicos, productos naturales Putumayo, miel silvestre Colombia, plantas medicinales amazónicas, origen Putumayo" />
+
+    <!-- Redes sociales y WhatsApp -->
+    <meta property="og:title" content="Origen Putumayo - Productos Amazónicos Naturales" />
+    <meta property="og:description" content="Productos amazónicos 100% naturales directo desde el Putumayo. Envíos a toda Colombia." />
+    <meta property="og:url" content="https://www.origenputumayo.com" />
+    <meta property="og:type" content="website" />
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" />
   </head>
   <body>
     <div id="root"></div>
